// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button when only the "iconPosition" and "iconType" props are passed into the component renders the default props and children to match the snapshot with the Icon after children 1`] = `
.c2 {
  position: relative;
  color: var(--colorsActionMajor500);
  background-color: transparent;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 16px;
  width: 16px;
}

.c2::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e928";
  font-style: normal;
  font-weight: normal;
  vertical-align: middle;
  font-size: 16px;
  line-height: 16px;
  display: block;
}

.c3 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c3 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c3 .c1 svg {
  margin-top: 0;
}

.c4 .c1 {
  color: var(--colorsActionMajor500);
}

.c4:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c4 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c4 .c1 svg {
  margin-top: 0;
}

.c5 .c1 {
  color: var(--colorsActionMajor500);
}

.c5:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c5 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c5 .c1 svg {
  margin-top: 0;
}

.c6 .c1 {
  color: var(--colorsActionMinor500);
}

.c6 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c6 .c1 svg {
  margin-top: 0;
}

.c7 .c1 {
  color: var(--colorsActionMajor500);
}

.c7:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c7 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c7 .c1 svg {
  margin-top: 0;
}

.c8 .c1 {
  color: var(--colorsActionMajor500);
}

.c8:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c8 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c8 .c1 svg {
  margin-top: 0;
}

.c9 .c1 {
  color: var(--colorsActionMajor500);
}

.c9:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c9 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c9 .c1 svg {
  margin-top: 0;
}

.c10 .c1 {
  color: var(--colorsActionMinor500);
}

.c10 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c10 .c1 svg {
  margin-top: 0;
}

.c11 .c1 {
  color: var(--colorsActionMajor500);
}

.c11:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c11 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c11 .c1 svg {
  margin-top: 0;
}

.c12 .c1 {
  color: var(--colorsActionMajor500);
}

.c12:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c12 .c1 {
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 1px;
  height: 16px;
  margin-left: auto;
  margin-right: auto;
}

.c12 .c1 svg {
  margin-top: 0;
}

.c13 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c13 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c13 .c1 svg {
  margin-top: 0;
}

.c14 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c14 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c14 .c1 svg {
  margin-top: 0;
}

.c15 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c15 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c15 .c1 svg {
  margin-top: 0;
}

.c16 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c16 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c16 .c1 svg {
  margin-top: 0;
}

.c17 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c17 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c17 .c1 svg {
  margin-top: 0;
}

.c18 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c18 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c18 .c1 svg {
  margin-top: 0;
}

.c19 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c19 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c19 .c1 svg {
  margin-top: 0;
}

.c20 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c20 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c20 .c1 svg {
  margin-top: 0;
}

.c21 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c21 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c21 .c1 svg {
  margin-top: 0;
}

.c22 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c22 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c22 .c1 svg {
  margin-top: 0;
}

.c23 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c23 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c23 .c1 svg {
  margin-top: 0;
}

.c24 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c24 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c24 .c1 svg {
  margin-top: 0;
}

.c25 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c25 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c25 .c1 svg {
  margin-top: 0;
}

.c26 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c26 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c26 .c1 svg {
  margin-top: 0;
}

.c27 .c1 {
  color: var(--colorsActionMajor500);
}

.c27:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c27 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c27 .c1 svg {
  margin-top: 0;
}

.c28 .c1 {
  color: var(--colorsActionMajor500);
}

.c28:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c28 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c28 .c1 svg {
  margin-top: 0;
}

.c29 .c1 {
  color: var(--colorsActionMajor500);
}

.c29:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c29 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c29 .c1 svg {
  margin-top: 0;
}

.c30 .c1 {
  color: var(--colorsActionMajor500);
}

.c30:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c30 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c30 .c1 svg {
  margin-top: 0;
}

.c31 .c1 {
  color: var(--colorsActionMajor500);
}

.c31:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c31 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c31 .c1 svg {
  margin-top: 0;
}

.c32 .c1 {
  color: var(--colorsActionMajor500);
}

.c32:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c32 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c32 .c1 svg {
  margin-top: 0;
}

.c33 .c1 {
  color: var(--colorsActionMajor500);
}

.c33:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c33 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c33 .c1 svg {
  margin-top: 0;
}

.c34 .c1 {
  color: var(--colorsActionMajor500);
}

.c34:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c34 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c34 .c1 svg {
  margin-top: 0;
}

.c35 .c1 {
  color: var(--colorsActionMajor500);
}

.c35:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c35 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c35 .c1 svg {
  margin-top: 0;
}

.c36 .c1 {
  color: var(--colorsActionMajor500);
}

.c36:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c36 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c36 .c1 svg {
  margin-top: 0;
}

.c37 .c1 {
  color: var(--colorsActionMajor500);
}

.c37:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c37 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c37 .c1 svg {
  margin-top: 0;
}

.c38 .c1 {
  color: var(--colorsActionMajor500);
}

.c38:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c38 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c38 .c1 svg {
  margin-top: 0;
}

.c39 .c1 {
  color: var(--colorsActionMajor500);
}

.c39:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c39 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c39 .c1 svg {
  margin-top: 0;
}

.c40 .c1 {
  color: var(--colorsActionMajor500);
}

.c40:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c40 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c40 .c1 svg {
  margin-top: 0;
}

.c41 .c1 {
  color: var(--colorsActionMajor500);
}

.c41:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c41 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c41 .c1 svg {
  margin-top: 0;
}

.c42 .c1 {
  color: var(--colorsActionMajor500);
}

.c42:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c42 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c42 .c1 svg {
  margin-top: 0;
}

.c43 .c1 {
  color: var(--colorsActionMajor500);
}

.c43:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c43 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c43 .c1 svg {
  margin-top: 0;
}

.c44 .c1 {
  color: var(--colorsActionMajor500);
}

.c44:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c44 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c44 .c1 svg {
  margin-top: 0;
}

.c45 .c1 {
  color: var(--colorsActionMajor500);
}

.c45:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c45 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c45 .c1 svg {
  margin-top: 0;
}

.c46 .c1 {
  color: var(--colorsActionMajor500);
}

.c46:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c46 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c46 .c1 svg {
  margin-top: 0;
}

.c47 .c1 {
  color: var(--colorsActionMajor500);
}

.c47:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c47 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c47 .c1 svg {
  margin-top: 0;
}

.c48 .c1 {
  color: var(--colorsActionMajor500);
}

.c48:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c48 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c48 .c1 svg {
  margin-top: 0;
}

.c49 .c1 {
  color: var(--colorsActionMajor500);
}

.c49:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c49 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c49 .c1 svg {
  margin-top: 0;
}

.c50 .c1 {
  color: var(--colorsActionMajor500);
}

.c50:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c50 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c50 .c1 svg {
  margin-top: 0;
}

.c51 .c1 {
  color: var(--colorsActionMajor500);
}

.c51:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c51 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c51 .c1 svg {
  margin-top: 0;
}

.c52 .c1 {
  color: var(--colorsActionMajor500);
}

.c52:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c52 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c52 .c1 svg {
  margin-top: 0;
}

.c53 .c1 {
  color: var(--colorsActionMajor500);
}

.c53:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c53 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c53 .c1 svg {
  margin-top: 0;
}

.c54 .c1 {
  color: var(--colorsActionMajor500);
}

.c54:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c54 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c54 .c1 svg {
  margin-top: 0;
}

.c55 .c1 {
  color: var(--colorsActionMinor500);
}

.c55 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c55 .c1 svg {
  margin-top: 0;
}

.c56 .c1 {
  color: var(--colorsActionMinor500);
}

.c56 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c56 .c1 svg {
  margin-top: 0;
}

.c57 .c1 {
  color: var(--colorsActionMinor500);
}

.c57 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c57 .c1 svg {
  margin-top: 0;
}

.c58 .c1 {
  color: var(--colorsActionMinor500);
}

.c58 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c58 .c1 svg {
  margin-top: 0;
}

.c59 .c1 {
  color: var(--colorsActionMinor500);
}

.c59 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c59 .c1 svg {
  margin-top: 0;
}

.c60 .c1 {
  color: var(--colorsActionMinor500);
}

.c60 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c60 .c1 svg {
  margin-top: 0;
}

.c61 .c1 {
  color: var(--colorsActionMinor500);
}

.c61 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c61 .c1 svg {
  margin-top: 0;
}

.c62 .c1 {
  color: var(--colorsActionMinor500);
}

.c62 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c62 .c1 svg {
  margin-top: 0;
}

.c63 .c1 {
  color: var(--colorsActionMinor500);
}

.c63 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c63 .c1 svg {
  margin-top: 0;
}

.c64 .c1 {
  color: var(--colorsActionMinor500);
}

.c64 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c64 .c1 svg {
  margin-top: 0;
}

.c65 .c1 {
  color: var(--colorsActionMinor500);
}

.c65 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c65 .c1 svg {
  margin-top: 0;
}

.c66 .c1 {
  color: var(--colorsActionMinor500);
}

.c66 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c66 .c1 svg {
  margin-top: 0;
}

.c67 .c1 {
  color: var(--colorsActionMinor500);
}

.c67 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c67 .c1 svg {
  margin-top: 0;
}

.c68 .c1 {
  color: var(--colorsActionMinor500);
}

.c68 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c68 .c1 svg {
  margin-top: 0;
}

.c69 .c1 {
  color: var(--colorsActionMajor500);
}

.c69:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c69 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c69 .c1 svg {
  margin-top: 0;
}

.c70 .c1 {
  color: var(--colorsActionMajor500);
}

.c70:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c70 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c70 .c1 svg {
  margin-top: 0;
}

.c71 .c1 {
  color: var(--colorsActionMajor500);
}

.c71:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c71 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c71 .c1 svg {
  margin-top: 0;
}

.c72 .c1 {
  color: var(--colorsActionMajor500);
}

.c72:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c72 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c72 .c1 svg {
  margin-top: 0;
}

.c73 .c1 {
  color: var(--colorsActionMajor500);
}

.c73:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c73 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c73 .c1 svg {
  margin-top: 0;
}

.c74 .c1 {
  color: var(--colorsActionMajor500);
}

.c74:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c74 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c74 .c1 svg {
  margin-top: 0;
}

.c75 .c1 {
  color: var(--colorsActionMajor500);
}

.c75:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c75 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c75 .c1 svg {
  margin-top: 0;
}

.c76 .c1 {
  color: var(--colorsActionMajor500);
}

.c76:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c76 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c76 .c1 svg {
  margin-top: 0;
}

.c77 .c1 {
  color: var(--colorsActionMajor500);
}

.c77:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c77 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c77 .c1 svg {
  margin-top: 0;
}

.c78 .c1 {
  color: var(--colorsActionMajor500);
}

.c78:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c78 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c78 .c1 svg {
  margin-top: 0;
}

.c79 .c1 {
  color: var(--colorsActionMajor500);
}

.c79:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c79 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c79 .c1 svg {
  margin-top: 0;
}

.c80 .c1 {
  color: var(--colorsActionMajor500);
}

.c80:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c80 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c80 .c1 svg {
  margin-top: 0;
}

.c81 .c1 {
  color: var(--colorsActionMajor500);
}

.c81:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c81 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c81 .c1 svg {
  margin-top: 0;
}

.c82 .c1 {
  color: var(--colorsActionMajor500);
}

.c82:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c82 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c82 .c1 svg {
  margin-top: 0;
}

.c83 .c1 {
  color: var(--colorsActionMajor500);
}

.c83:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c83 .c1 {
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 1px;
  height: 16px;
  margin-left: auto;
  margin-right: auto;
}

.c83 .c1 svg {
  margin-top: 0;
}

.c84 .c1 {
  color: var(--colorsActionMajor500);
}

.c84:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c84 .c1 {
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 1px;
  height: 16px;
  margin-left: auto;
  margin-right: auto;
}

.c84 .c1 svg {
  margin-top: 0;
}

.c85 .c1 {
  color: var(--colorsActionMajor500);
}

.c85:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c85 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c85 .c1 svg {
  margin-top: 0;
}

.c86 .c1 {
  color: var(--colorsActionMajor500);
}

.c86:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c86 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c86 .c1 svg {
  margin-top: 0;
}

.c87 .c1 {
  color: var(--colorsActionMajor500);
}

.c87:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c87 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c87 .c1 svg {
  margin-top: 0;
}

.c88 .c1 {
  color: var(--colorsActionMajor500);
}

.c88:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c88 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c88 .c1 svg {
  margin-top: 0;
}

.c89 .c1 {
  color: var(--colorsActionMajor500);
}

.c89:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c89 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c89 .c1 svg {
  margin-top: 0;
}

.c90 .c1 {
  color: var(--colorsActionMajor500);
}

.c90:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c90 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c90 .c1 svg {
  margin-top: 0;
}

.c91 .c1 {
  color: var(--colorsActionMajor500);
}

.c91:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c91 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c91 .c1 svg {
  margin-top: 0;
}

.c92 .c1 {
  color: var(--colorsActionMajor500);
}

.c92:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c92 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c92 .c1 svg {
  margin-top: 0;
}

.c93 .c1 {
  color: var(--colorsActionMajor500);
}

.c93:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c93 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c93 .c1 svg {
  margin-top: 0;
}

.c94 .c1 {
  color: var(--colorsActionMajor500);
}

.c94:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c94 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c94 .c1 svg {
  margin-top: 0;
}

.c95 .c1 {
  color: var(--colorsActionMajor500);
}

.c95:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c95 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c95 .c1 svg {
  margin-top: 0;
}

.c96 .c1 {
  color: var(--colorsActionMajor500);
}

.c96:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c96 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c96 .c1 svg {
  margin-top: 0;
}

.c97 .c1 {
  color: var(--colorsActionMajor500);
}

.c97:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c97 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c97 .c1 svg {
  margin-top: 0;
}

.c98 .c1 {
  color: var(--colorsActionMajor500);
}

.c98:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c98 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c98 .c1 svg {
  margin-top: 0;
}

.c99 .c1 {
  color: var(--colorsActionMajor500);
}

.c99:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c99 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c99 .c1 svg {
  margin-top: 0;
}

.c100 .c1 {
  color: var(--colorsActionMajor500);
}

.c100:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c100 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c100 .c1 svg {
  margin-top: 0;
}

.c101 .c1 {
  color: var(--colorsActionMajor500);
}

.c101:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c101 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c101 .c1 svg {
  margin-top: 0;
}

.c102 .c1 {
  color: var(--colorsActionMajor500);
}

.c102:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c102 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c102 .c1 svg {
  margin-top: 0;
}

.c103 .c1 {
  color: var(--colorsActionMajor500);
}

.c103:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c103 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c103 .c1 svg {
  margin-top: 0;
}

.c104 .c1 {
  color: var(--colorsActionMajor500);
}

.c104:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c104 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c104 .c1 svg {
  margin-top: 0;
}

.c105 .c1 {
  color: var(--colorsActionMajor500);
}

.c105:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c105 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c105 .c1 svg {
  margin-top: 0;
}

.c106 .c1 {
  color: var(--colorsActionMajor500);
}

.c106:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c106 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c106 .c1 svg {
  margin-top: 0;
}

.c107 .c1 {
  color: var(--colorsActionMajor500);
}

.c107:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c107 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c107 .c1 svg {
  margin-top: 0;
}

.c108 .c1 {
  color: var(--colorsActionMajor500);
}

.c108:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c108 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c108 .c1 svg {
  margin-top: 0;
}

.c109 .c1 {
  color: var(--colorsActionMajor500);
}

.c109:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c109 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c109 .c1 svg {
  margin-top: 0;
}

.c110 .c1 {
  color: var(--colorsActionMajor500);
}

.c110:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c110 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c110 .c1 svg {
  margin-top: 0;
}

.c0 {
  padding-left: var(--spacing300);
  padding-right: var(--spacing300);
  margin: var(--spacing000);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  outline-offset: 0;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  border-color: var(--colorsActionMajor500);
  border-radius: var(--borderRadius400);
  color: var(--colorsActionMajor500);
  font-size: var(--fontSizes100);
  min-height: 40px;
}

.c0:focus {
  outline: solid 3px var(--colorsSemanticFocus500);
}

.c0 .c1 {
  color: var(--colorsActionMajor500);
}

.c0 .c111 {
  background-color: var(--colorsActionMajor500);
}

.c0:hover {
  background: var(--colorsActionMajor600);
  border-radius: var(--borderRadius400);
  border-color: var(--colorsActionMajorTransparent);
  color: var(--colorsActionMajorYang100);
}

.c0:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c0:hover .c111 {
  background-color: var(--colorsActionMajorYang100);
}

.c0 .c1 {
  margin-left: var(--spacing100);
  margin-right: 0px;
  margin-bottom: 0px;
  height: 16px;
}

.c0 .c1 svg {
  margin-top: 0;
}

<button
  className="c0"
  data-component="button"
  disabled={false}
  draggable={false}
  role="button"
  size="medium"
  type="button"
>
  <span>
    <span
      data-element="main-text"
    >
      foo
    </span>
  </span>
  <span
    aria-hidden={true}
    className="c1 c2"
    color="--colorsActionMajor500"
    data-component="icon"
    data-element="filter"
    disabled={false}
    fontSize="small"
    type="filter"
  />
</button>
`;

exports[`Button when only the "iconPosition" and "iconType" props are passed into the component renders the default props and children to match the snapshot with the Icon before children 1`] = `
.c2 {
  position: relative;
  color: var(--colorsActionMajor500);
  background-color: transparent;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 16px;
  width: 16px;
}

.c2::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e928";
  font-style: normal;
  font-weight: normal;
  vertical-align: middle;
  font-size: 16px;
  line-height: 16px;
  display: block;
}

.c3 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c3 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c3 .c1 svg {
  margin-top: 0;
}

.c4 .c1 {
  color: var(--colorsActionMajor500);
}

.c4:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c4 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c4 .c1 svg {
  margin-top: 0;
}

.c5 .c1 {
  color: var(--colorsActionMajor500);
}

.c5:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c5 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c5 .c1 svg {
  margin-top: 0;
}

.c6 .c1 {
  color: var(--colorsActionMinor500);
}

.c6 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c6 .c1 svg {
  margin-top: 0;
}

.c7 .c1 {
  color: var(--colorsActionMajor500);
}

.c7:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c7 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c7 .c1 svg {
  margin-top: 0;
}

.c8 .c1 {
  color: var(--colorsActionMajor500);
}

.c8:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c8 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c8 .c1 svg {
  margin-top: 0;
}

.c9 .c1 {
  color: var(--colorsActionMajor500);
}

.c9:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c9 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c9 .c1 svg {
  margin-top: 0;
}

.c10 .c1 {
  color: var(--colorsActionMinor500);
}

.c10 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c10 .c1 svg {
  margin-top: 0;
}

.c0 {
  padding-left: var(--spacing300);
  padding-right: var(--spacing300);
  margin: var(--spacing000);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  outline-offset: 0;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  border-color: var(--colorsActionMajor500);
  border-radius: var(--borderRadius400);
  color: var(--colorsActionMajor500);
  font-size: var(--fontSizes100);
  min-height: 40px;
}

.c0:focus {
  outline: solid 3px var(--colorsSemanticFocus500);
}

.c0 .c1 {
  color: var(--colorsActionMajor500);
}

.c0 .c110 {
  background-color: var(--colorsActionMajor500);
}

.c0:hover {
  background: var(--colorsActionMajor600);
  border-radius: var(--borderRadius400);
  border-color: var(--colorsActionMajorTransparent);
  color: var(--colorsActionMajorYang100);
}

.c0:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c0:hover .c110 {
  background-color: var(--colorsActionMajorYang100);
}

.c0 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c0 .c1 svg {
  margin-top: 0;
}

.c11 .c1 {
  color: var(--colorsActionMajor500);
}

.c11:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c11 .c1 {
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 1px;
  height: 16px;
  margin-left: auto;
  margin-right: auto;
}

.c11 .c1 svg {
  margin-top: 0;
}

.c12 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c12 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c12 .c1 svg {
  margin-top: 0;
}

.c13 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c13 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c13 .c1 svg {
  margin-top: 0;
}

.c14 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c14 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c14 .c1 svg {
  margin-top: 0;
}

.c15 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c15 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c15 .c1 svg {
  margin-top: 0;
}

.c16 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c16 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c16 .c1 svg {
  margin-top: 0;
}

.c17 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c17 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c17 .c1 svg {
  margin-top: 0;
}

.c18 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c18 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c18 .c1 svg {
  margin-top: 0;
}

.c19 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c19 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c19 .c1 svg {
  margin-top: 0;
}

.c20 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c20 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c20 .c1 svg {
  margin-top: 0;
}

.c21 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c21 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c21 .c1 svg {
  margin-top: 0;
}

.c22 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c22 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c22 .c1 svg {
  margin-top: 0;
}

.c23 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c23 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c23 .c1 svg {
  margin-top: 0;
}

.c24 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c24 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c24 .c1 svg {
  margin-top: 0;
}

.c25 .c1 {
  color: var(--colorsActionMajorYang100);
}

.c25 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c25 .c1 svg {
  margin-top: 0;
}

.c26 .c1 {
  color: var(--colorsActionMajor500);
}

.c26:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c26 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c26 .c1 svg {
  margin-top: 0;
}

.c27 .c1 {
  color: var(--colorsActionMajor500);
}

.c27:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c27 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c27 .c1 svg {
  margin-top: 0;
}

.c28 .c1 {
  color: var(--colorsActionMajor500);
}

.c28:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c28 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c28 .c1 svg {
  margin-top: 0;
}

.c29 .c1 {
  color: var(--colorsActionMajor500);
}

.c29:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c29 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c29 .c1 svg {
  margin-top: 0;
}

.c30 .c1 {
  color: var(--colorsActionMajor500);
}

.c30:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c30 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c30 .c1 svg {
  margin-top: 0;
}

.c31 .c1 {
  color: var(--colorsActionMajor500);
}

.c31:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c31 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c31 .c1 svg {
  margin-top: 0;
}

.c32 .c1 {
  color: var(--colorsActionMajor500);
}

.c32:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c32 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c32 .c1 svg {
  margin-top: 0;
}

.c33 .c1 {
  color: var(--colorsActionMajor500);
}

.c33:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c33 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c33 .c1 svg {
  margin-top: 0;
}

.c34 .c1 {
  color: var(--colorsActionMajor500);
}

.c34:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c34 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c34 .c1 svg {
  margin-top: 0;
}

.c35 .c1 {
  color: var(--colorsActionMajor500);
}

.c35:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c35 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c35 .c1 svg {
  margin-top: 0;
}

.c36 .c1 {
  color: var(--colorsActionMajor500);
}

.c36:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c36 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c36 .c1 svg {
  margin-top: 0;
}

.c37 .c1 {
  color: var(--colorsActionMajor500);
}

.c37:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c37 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c37 .c1 svg {
  margin-top: 0;
}

.c38 .c1 {
  color: var(--colorsActionMajor500);
}

.c38:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c38 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c38 .c1 svg {
  margin-top: 0;
}

.c39 .c1 {
  color: var(--colorsActionMajor500);
}

.c39:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c39 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c39 .c1 svg {
  margin-top: 0;
}

.c40 .c1 {
  color: var(--colorsActionMajor500);
}

.c40:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c40 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c40 .c1 svg {
  margin-top: 0;
}

.c41 .c1 {
  color: var(--colorsActionMajor500);
}

.c41:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c41 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c41 .c1 svg {
  margin-top: 0;
}

.c42 .c1 {
  color: var(--colorsActionMajor500);
}

.c42:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c42 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c42 .c1 svg {
  margin-top: 0;
}

.c43 .c1 {
  color: var(--colorsActionMajor500);
}

.c43:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c43 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c43 .c1 svg {
  margin-top: 0;
}

.c44 .c1 {
  color: var(--colorsActionMajor500);
}

.c44:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c44 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c44 .c1 svg {
  margin-top: 0;
}

.c45 .c1 {
  color: var(--colorsActionMajor500);
}

.c45:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c45 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c45 .c1 svg {
  margin-top: 0;
}

.c46 .c1 {
  color: var(--colorsActionMajor500);
}

.c46:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c46 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c46 .c1 svg {
  margin-top: 0;
}

.c47 .c1 {
  color: var(--colorsActionMajor500);
}

.c47:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c47 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c47 .c1 svg {
  margin-top: 0;
}

.c48 .c1 {
  color: var(--colorsActionMajor500);
}

.c48:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c48 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c48 .c1 svg {
  margin-top: 0;
}

.c49 .c1 {
  color: var(--colorsActionMajor500);
}

.c49:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c49 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c49 .c1 svg {
  margin-top: 0;
}

.c50 .c1 {
  color: var(--colorsActionMajor500);
}

.c50:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c50 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c50 .c1 svg {
  margin-top: 0;
}

.c51 .c1 {
  color: var(--colorsActionMajor500);
}

.c51:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c51 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c51 .c1 svg {
  margin-top: 0;
}

.c52 .c1 {
  color: var(--colorsActionMajor500);
}

.c52:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c52 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c52 .c1 svg {
  margin-top: 0;
}

.c53 .c1 {
  color: var(--colorsActionMajor500);
}

.c53:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c53 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c53 .c1 svg {
  margin-top: 0;
}

.c54 .c1 {
  color: var(--colorsActionMinor500);
}

.c54 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c54 .c1 svg {
  margin-top: 0;
}

.c55 .c1 {
  color: var(--colorsActionMinor500);
}

.c55 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c55 .c1 svg {
  margin-top: 0;
}

.c56 .c1 {
  color: var(--colorsActionMinor500);
}

.c56 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c56 .c1 svg {
  margin-top: 0;
}

.c57 .c1 {
  color: var(--colorsActionMinor500);
}

.c57 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c57 .c1 svg {
  margin-top: 0;
}

.c58 .c1 {
  color: var(--colorsActionMinor500);
}

.c58 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c58 .c1 svg {
  margin-top: 0;
}

.c59 .c1 {
  color: var(--colorsActionMinor500);
}

.c59 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c59 .c1 svg {
  margin-top: 0;
}

.c60 .c1 {
  color: var(--colorsActionMinor500);
}

.c60 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c60 .c1 svg {
  margin-top: 0;
}

.c61 .c1 {
  color: var(--colorsActionMinor500);
}

.c61 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c61 .c1 svg {
  margin-top: 0;
}

.c62 .c1 {
  color: var(--colorsActionMinor500);
}

.c62 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c62 .c1 svg {
  margin-top: 0;
}

.c63 .c1 {
  color: var(--colorsActionMinor500);
}

.c63 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c63 .c1 svg {
  margin-top: 0;
}

.c64 .c1 {
  color: var(--colorsActionMinor500);
}

.c64 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c64 .c1 svg {
  margin-top: 0;
}

.c65 .c1 {
  color: var(--colorsActionMinor500);
}

.c65 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c65 .c1 svg {
  margin-top: 0;
}

.c66 .c1 {
  color: var(--colorsActionMinor500);
}

.c66 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c66 .c1 svg {
  margin-top: 0;
}

.c67 .c1 {
  color: var(--colorsActionMinor500);
}

.c67 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c67 .c1 svg {
  margin-top: 0;
}

.c68 .c1 {
  color: var(--colorsActionMajor500);
}

.c68:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c68 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c68 .c1 svg {
  margin-top: 0;
}

.c69 .c1 {
  color: var(--colorsActionMajor500);
}

.c69:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c69 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c69 .c1 svg {
  margin-top: 0;
}

.c70 .c1 {
  color: var(--colorsActionMajor500);
}

.c70:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c70 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c70 .c1 svg {
  margin-top: 0;
}

.c71 .c1 {
  color: var(--colorsActionMajor500);
}

.c71:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c71 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c71 .c1 svg {
  margin-top: 0;
}

.c72 .c1 {
  color: var(--colorsActionMajor500);
}

.c72:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c72 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c72 .c1 svg {
  margin-top: 0;
}

.c73 .c1 {
  color: var(--colorsActionMajor500);
}

.c73:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c73 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c73 .c1 svg {
  margin-top: 0;
}

.c74 .c1 {
  color: var(--colorsActionMajor500);
}

.c74:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c74 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c74 .c1 svg {
  margin-top: 0;
}

.c75 .c1 {
  color: var(--colorsActionMajor500);
}

.c75:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c75 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c75 .c1 svg {
  margin-top: 0;
}

.c76 .c1 {
  color: var(--colorsActionMajor500);
}

.c76:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c76 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c76 .c1 svg {
  margin-top: 0;
}

.c77 .c1 {
  color: var(--colorsActionMajor500);
}

.c77:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c77 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c77 .c1 svg {
  margin-top: 0;
}

.c78 .c1 {
  color: var(--colorsActionMajor500);
}

.c78:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c78 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c78 .c1 svg {
  margin-top: 0;
}

.c79 .c1 {
  color: var(--colorsActionMajor500);
}

.c79:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c79 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c79 .c1 svg {
  margin-top: 0;
}

.c80 .c1 {
  color: var(--colorsActionMajor500);
}

.c80:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c80 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c80 .c1 svg {
  margin-top: 0;
}

.c81 .c1 {
  color: var(--colorsActionMajor500);
}

.c81:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c81 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c81 .c1 svg {
  margin-top: 0;
}

.c82 .c1 {
  color: var(--colorsActionMajor500);
}

.c82:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c82 .c1 {
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 1px;
  height: 16px;
  margin-left: auto;
  margin-right: auto;
}

.c82 .c1 svg {
  margin-top: 0;
}

.c83 .c1 {
  color: var(--colorsActionMajor500);
}

.c83:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c83 .c1 {
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 1px;
  height: 16px;
  margin-left: auto;
  margin-right: auto;
}

.c83 .c1 svg {
  margin-top: 0;
}

.c84 .c1 {
  color: var(--colorsActionMajor500);
}

.c84:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c84 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c84 .c1 svg {
  margin-top: 0;
}

.c85 .c1 {
  color: var(--colorsActionMajor500);
}

.c85:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c85 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c85 .c1 svg {
  margin-top: 0;
}

.c86 .c1 {
  color: var(--colorsActionMajor500);
}

.c86:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c86 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c86 .c1 svg {
  margin-top: 0;
}

.c87 .c1 {
  color: var(--colorsActionMajor500);
}

.c87:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c87 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c87 .c1 svg {
  margin-top: 0;
}

.c88 .c1 {
  color: var(--colorsActionMajor500);
}

.c88:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c88 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c88 .c1 svg {
  margin-top: 0;
}

.c89 .c1 {
  color: var(--colorsActionMajor500);
}

.c89:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c89 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c89 .c1 svg {
  margin-top: 0;
}

.c90 .c1 {
  color: var(--colorsActionMajor500);
}

.c90:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c90 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c90 .c1 svg {
  margin-top: 0;
}

.c91 .c1 {
  color: var(--colorsActionMajor500);
}

.c91:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c91 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c91 .c1 svg {
  margin-top: 0;
}

.c92 .c1 {
  color: var(--colorsActionMajor500);
}

.c92:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c92 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c92 .c1 svg {
  margin-top: 0;
}

.c93 .c1 {
  color: var(--colorsActionMajor500);
}

.c93:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c93 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c93 .c1 svg {
  margin-top: 0;
}

.c94 .c1 {
  color: var(--colorsActionMajor500);
}

.c94:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c94 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c94 .c1 svg {
  margin-top: 0;
}

.c95 .c1 {
  color: var(--colorsActionMajor500);
}

.c95:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c95 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c95 .c1 svg {
  margin-top: 0;
}

.c96 .c1 {
  color: var(--colorsActionMajor500);
}

.c96:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c96 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c96 .c1 svg {
  margin-top: 0;
}

.c97 .c1 {
  color: var(--colorsActionMajor500);
}

.c97:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c97 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c97 .c1 svg {
  margin-top: 0;
}

.c98 .c1 {
  color: var(--colorsActionMajor500);
}

.c98:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c98 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c98 .c1 svg {
  margin-top: 0;
}

.c99 .c1 {
  color: var(--colorsActionMajor500);
}

.c99:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c99 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c99 .c1 svg {
  margin-top: 0;
}

.c100 .c1 {
  color: var(--colorsActionMajor500);
}

.c100:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c100 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c100 .c1 svg {
  margin-top: 0;
}

.c101 .c1 {
  color: var(--colorsActionMajor500);
}

.c101:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c101 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c101 .c1 svg {
  margin-top: 0;
}

.c102 .c1 {
  color: var(--colorsActionMajor500);
}

.c102:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c102 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c102 .c1 svg {
  margin-top: 0;
}

.c103 .c1 {
  color: var(--colorsActionMajor500);
}

.c103:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c103 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c103 .c1 svg {
  margin-top: 0;
}

.c104 .c1 {
  color: var(--colorsActionMajor500);
}

.c104:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c104 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c104 .c1 svg {
  margin-top: 0;
}

.c105 .c1 {
  color: var(--colorsActionMajor500);
}

.c105:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c105 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c105 .c1 svg {
  margin-top: 0;
}

.c106 .c1 {
  color: var(--colorsActionMajor500);
}

.c106:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c106 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c106 .c1 svg {
  margin-top: 0;
}

.c107 .c1 {
  color: var(--colorsActionMajor500);
}

.c107:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c107 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c107 .c1 svg {
  margin-top: 0;
}

.c108 .c1 {
  color: var(--colorsActionMajor500);
}

.c108:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c108 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c108 .c1 svg {
  margin-top: 0;
}

.c109 .c1 {
  color: var(--colorsActionMajor500);
}

.c109:hover .c1 {
  color: var(--colorsActionMajorYang100);
}

.c109 .c1 {
  margin-left: 0px;
  margin-right: var(--spacing100);
  margin-bottom: 0px;
  height: 16px;
}

.c109 .c1 svg {
  margin-top: 0;
}

<button
  className="c0"
  data-component="button"
  disabled={false}
  draggable={false}
  role="button"
  size="medium"
  type="button"
>
  <span
    aria-hidden={true}
    className="c1 c2"
    color="--colorsActionMajor500"
    data-component="icon"
    data-element="filter"
    disabled={false}
    fontSize="small"
    type="filter"
  />
  <span>
    <span
      data-element="main-text"
    >
      foo
    </span>
  </span>
</button>
`;
